$Id$

2013/11/14  arch/linux-gfortran64 (added)
2011/12/09  arch/aix-nifs (added)
2011/07/23  arch/macosxi-gfortran64 (added)
2010/11/22  arch/macosxi-pgf64 (added)

V4.03
2010/07/15  GUTIMES added
            GSAF closing message updated

2010/05/28  fio2.f correct (end-of-file behavior in gsview)

2010/04/07  arch/linux-ifc (change of X11 paths)
            arch/linux-ifc64 (change of X11 paths)
            arch/linux-f95-64 (change of X11 paths)
            arch/linux-g95-64 (added)
            arch/linux-gfortran (added)
            arch/ubuntu-gfortran (added)

V4.02
2009/11/09  SVG support: lib/gsvg.c added

V4.01
2009/09/22  arch/macosxi-ifc updated

V4.00
2009/03/08  g77 support ended
            arch/linux-g77, arch/macosx-g77 removed

2009/01/05  arch/linux-pgf64 added

2008/11/07  CONTG? in cont2.f corrected

2008/10/31  arch/linux-ifc64 added

2008/10/06  GDATA3D3 was added

2008/06/06  macosxi-ifc/Makefile.arch corrected (LSB)

2008/05/23  cygwin-g95/Makefile.arch added

2008/01/16  GF_CHECK_EVENT added

2008/01/07  Bugfix in gtgif.c (by Kawamura)
            Collapse bug for a long line corrected
            Link error on absoft compilers fixed

V3.99
2007/11/10  LINESC and LINESC2D added
            Bugs in POLY and LINES2D corrected (Thanks to Dr. Honda)

2007/07/31  recompile process of gsview corrected

2007/06/27  Fujistu compiler f95 and fcc supported for linux-64

2007/05/31  INTCLIP intrduced in cont1.f

V3.98
2006/09/21  Parameters introduced in A*.f
            Matrix size in A*.f reduced from 1000 to 300
            Adjust A3dcomm.inc if any trouble ocuurs
            Size of vector fonts reduced

V3.97
2006/08/01  arch/linux-ia64 added

V3.97
2006/07/24  gps.c: dvrgbtrg updated

2006/07/22  Argbfunc.f: R2Y2W, W2G2B, W2R2K, K2B2W, WRKBW, WRGBW added

2006/07/18  arch/macosx-gfortran added
            arch/macosx-g95 added

V3.96
2006/07/16  arch/macosxi-gfortran added
            arch/macosxi-g95 added
            arch/macosxi-ifc added