@@ -73,7 +73,7 @@ C
 C
          CALL GDEFIN3D(2.,24.,1.,17.5,XL,YL,ZL)
          CALL GVIEW3D(PHI,THETA,RADIUS,0.9,1,0.0,0.0,0.0)
-         CALL GDATA3D2(Z,101,IXMAX,IYMAX,X,Y,ZMIN,ZMAX)
+         CALL GDATA3D2(Z,X,Y,101,IXMAX,IYMAX,ZMIN,ZMAX)
 C
          CALL GDRWBK(0.3,0.3,0.3)
 C     
